Update Hamburger menu to new designs
* Use hamburger in tablet size now
* Fix inbox to remove set timeouts and use a variable in the component

--- a/portal-frontend/src/app/features/home/inbox/inbox.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox.component.html
@@ -102,7 +102,7 @@
     <div *ngIf="isLoading" class="center">
       <mat-spinner></mat-spinner>
     </div>
-    <mat-tab-group *ngIf="!isLoading" mat-align-tabs="start" mat-stretch-tabs #searchResultTabs>
+    <mat-tab-group [selectedIndex]="tabIndex" *ngIf="!isLoading" mat-align-tabs="start" mat-stretch-tabs #searchResultTabs>
       <mat-tab label="applications">
         <ng-template mat-tab-label> Applications: {{ applicationTotal }} </ng-template>
         <app-inbox-list
