--- a/portal-frontend/src/app/features/applications/edit-submission/success/success.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/success/success.component.html
@@ -49,6 +49,6 @@
   The Primary Contact will be emailed this information and all future correspondence.
 </p>
 <div class="buttons">
-  <button routerLink="/home" mat-flat-button color="primary">View Submission</button>
-  <button [routerLink]="'/application/' + fileId" mat-stroked-button color="primary">Return to inbox</button>
+  <button [routerLink]="'/application/' + fileId" mat-flat-button color="primary">View Submission</button>
+  <button routerLink="/home" mat-stroked-button color="primary">Return to inbox</button>
 </div>
