--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/success/success.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/success/success.component.html
@@ -10,7 +10,7 @@
   This fee can be paid:<br />
   1. Cheque: Made payable to the Minister of Finance c/o the ALC<br />
   2. Credit card: Over the phone or in-person<br /><br />
-  Please include your assigned Application ID with your payment.<br /><br />
+  Please include your assigned Notice of Intent ID with your payment.<br /><br />
   <strong>Mailing address:</strong><br />
   Agricultural Land Commission<br />
   201-4940 Canada Way, Burnaby, BC, Canada, V5G 4K6<br /><br />
