--- a/portal-frontend/src/app/shared/owner-dialogs/crown-owner-dialog/crown-owner-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/crown-owner-dialog/crown-owner-dialog.component.html
@@ -76,7 +76,7 @@
       </div>
       <div class="full-row">
         <mat-label for="type">Crown Type</mat-label>
-        <mat-button-toggle-group formControlName="crownLandOwnerType"  (change)="onChangeType($event)" class="input" id="crownLandOwnerType">
+        <mat-button-toggle-group formControlName="crownLandOwnerType" class="input" id="crownLandOwnerType">
           <mat-button-toggle value="provincial">Provincial Crown</mat-button-toggle>
           <mat-button-toggle value="federal">Federal Crown</mat-button-toggle>
         </mat-button-toggle-group>
