--- a/portal-frontend/src/app/features/applications/review-submission/success/success.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/success/success.component.html
@@ -13,7 +13,7 @@
 <ng-container *ngIf="!didAuthorize">
   <h2 class="heading">Application ID: {{ fileId }} has been refused by the {{ localGovernmentName }}.</h2>
   <p>
-    <span class="subheading1"><strong>Your review and decision has been submitted to the ALC.</strong></span
+    <span class="subheading1"><strong>Your review and decision have been submitted to the ALC.</strong></span
     ><br /><br /><br />
     {{ localGovernmentName }} will be cc'd on the email notifying the applicant that the application has not been
     forwarded to the ALC.
