Change app -> noi for noi success page

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/success/success.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/success/success.component.html
@@ -1,7 +1,7 @@
 <h2 class="heading">NOI ID: {{ fileId }} Submitted!</h2>
 <p>
   <span class="subheading1">
-    You have submitted a <strong>{{ appLabel }}</strong> application to the
+    You have submitted a <strong>{{ appLabel }}</strong> notice of intent to the
     <strong>Agricultural Land Commission</strong> for their review and decision. </span
   ><br /><br /><br />
 
