--- a/portal-frontend/src/app/features/notifications/edit-submission/success/success.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/success/success.component.html
@@ -1,8 +1,8 @@
 <h2 class="heading">Notification ID: {{ fileId }} Submitted!</h2>
 <p>
   <span class="subheading1">
-    You have submitted a <strong>{{ appLabel }}</strong> application to the
-    <strong>Agricultural Land Commission</strong> for their review and response.</span
+    You have submitted a <strong>Notification of {{ appLabel }}</strong> to the <strong>Agricultural Land Commission</strong> for their
+    review and response.</span
   >
   <br /><br /><br />
   The Primary Contact will receive an automated email shortly containing an attached PDF response which must be appended
