--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.html
@@ -3,7 +3,7 @@
 <div class="review-table">
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width flex-space-between-wrap">
-      <h4 [id]="parcel.uuid">Parcel {{ parcelInd + 1 }}: Parcel and Owner Information</h4>
+      <h4 [id]="parcel.uuid">Parcel #{{ parcelInd + 1 }}: Parcel and Owner Information</h4>
     </div>
     <div class="subheading2 grid-1">Ownership Type</div>
     <div class="grid-double">
