--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/parcel/parcel.component.html
@@ -4,7 +4,7 @@
 <div class="review-table">
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width flex-space-between-wrap">
-      <h4>Parcel {{ parcelInd + 1 }}</h4>
+      <h4>Parcel #{{ parcelInd + 1 }}</h4>
     </div>
     <div class="subheading2 grid-1">Parcel Type</div>
     <div class="grid-double">
