--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.scss
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.scss
@@ -1,6 +1,6 @@
 @use '../../../../../styles/colors';
 
-.mat-mdc-row:hover {
-    background-color: colors.$grey-light !important;
-    cursor: pointer;
+.link:hover {
+  background-color: colors.$grey-light !important;
+  cursor: pointer;
 }
