--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-details.component.html
@@ -31,6 +31,7 @@
       [showErrors]="showErrors"
       (onFormGroupChange)="onParcelFormChange($event)"
       (onOwnersUpdated)="onOwnersUpdated()"
+      (onOwnersDeleted)="reloadApplication()"
     ></app-parcel-entry>
 
     <div>
