--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
@@ -31,6 +31,7 @@
       [showErrors]="showErrors"
       (onFormGroupChange)="onParcelFormChange($event)"
       (onOwnersUpdated)="onOwnersUpdated()"
+      (onOwnersDeleted)="reloadSubmission()"
     ></app-noi-parcel-entry>
 
     <div>
